--- a/mobx_exemplo3/pubspec.yaml
+++ b/mobx_exemplo3/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mobx_exemplo_2
+name: mobx_exemplo3
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -19,14 +19,15 @@ environment:
 dependencies:
   mobx:
   flutter_mobx:
-  provider:
   get_it: ^4.0.0
+  intl: ^0.16.1
+  flutter_datetime_picker: ^1.3.4
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
 dev_dependencies:
   mobx_codegen:
@@ -45,8 +46,8 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
